# FNFest-Status

./: .gitignore  Cargo.toml  OBSWidget.py  README.md  config-example.ini  discordRPC.py  main.py  playerStatus.py  requirements.txt
src/: main.rs
src/player_status/: fetch.rs  monitor.rs  status.rs
web/: app.py
web/static/css/: styles.css
web/static/js/: script.js
web/templates/: index.html
