[package]
name = "fnfest-status"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "7.0.0"
regex = "1.5"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
sysinfo = "0.32.0" 
reqwest = { version = "0.12.8", features = ["json"] }